@@ -1,4 +1,5 @@
 import userinteraction
+from exceptions import InvalidRowError
 
 def prompt_for_ids(db, wantedtype, devices):
     devicegizmos = dict()
@@ -8,8 +9,6 @@ def prompt_for_ids(db, wantedtype, devices):
 
 def prompt_for_id(db, wantedtype, name, description=""):
     """Ask for the ID of a Gizmo and get it."""
-    from fgdb import InvalidRowError
-
     goodgizmo = False
     gizmo = None
     
