@@ -1,3 +1,7 @@
+2004-05-05    <chromakode@llama>
+
+	* fgdiag/lib/exceptions.py: Added central exception file.
+
 2004-05-04  Kevin Turner  <kevin@freegeek.org>
 
 	* fgdiag/lib/pyutil.py (withPager): 1.2 don't use apply()
